Bug 397200 - "OS X dylibs have non-unique signatures causing incorrect stack traces". r=luser,mento. a=bzbarsky.